<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCard</string>
    <string name="flash_card_generator_name">FlashCardGenerator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">Flash Cards</string>
    <string name="signin_welcome">Welcome to Flash Card!</string>
    <string name="signin_instructions">You only get one shot at this, \n so make it good</string>
    <string name="hint_user_name_entry">Please Enter Your Username</string>
    <string name="btn_sign_in_done">Flash Me</string>
    <string name="homepage_welcome">Hey</string>
    <string name="txt_create_new_deck">Click to Create a New Deck</string>
    <string name="homepage_instructions">Select a deck to start flash card generator or edit the cards</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit_card">Edit Card</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="hint_create_new_list">Enter the name of your new deck</string>
    <string name="hint_word">word</string>
    <string name="hint_definition">definition</string>
    <string name="dialog_card_builder_header">Word Card Builder</string>
    <string name="dialog_card_builder_directions">Enter a word for side A of the WordCard</string>
    <string name="hint_word_to_define">word to define</string>
    <string name="btn_next_word">Next Word</string>
    <string name="btn_done">Done</string>
    <string name="toast_need_deck_name">Oops! Looks like you forgot to name your Deck!</string>
    <string name="toast_make_changes">You can edit your words or definitions before saving</string>
    <string name="changes_saved">Deck changes have been saved</string>
    <string name="deck_list_header">Saved Decks</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="menu_flash_stop_flash">Stop Flash Card</string>
    <string name="pref_category_heading">FlashCard App User Preferences</string>
    <string name="pref_category_color_settings">Display and Color Settings</string>
    <string name="pref_category_word_card_order_settings">Flash Card View Settings</string>
    <string name="pref_category_word_card_creation_settings">Word Card Creator Settings</string>
    <string name="pref_auto_definition_title">Definition Generator</string>
    <string name="pref_auto_definition_summary">Do not auto generate definitions</string>
    <string name="pref_random_order_title">Card Shuffle</string>
    <string name="pref_random_order_summary">Display cards in random order</string>
    <string name="pref_text_color_title">Select your text color</string>
    <string name="pref_text_color_summary">Change the text color of your flash cards</string>
    <string name="pref_background_color_title">Select your background color</string>
    <string name="pref_background_color_summary">Change the color of your background</string>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_purple">Purple</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_white">White</string>
    <string name="dialog_edit_header">Word Card Editor</string>
    <string name="dialog_edit_directions">Edit the word and/or the definition.</string>
    <string name="dialog_edit_word_header">Word:</string>
    <string name="dialog_edit_definition_header">Definition:</string>
    <string name="toast_deck_saved">Save Complete</string>
    <string name="word_card_list_header_line1">Word Card List</string>
    <string name="word_card_list_header_line2">Click to add new Word Card</string>
    <string name="dialog_delete_header">Deck Selected</string>
    <string name="dialog_delete_directions">What would you like to do with the deck?</string>
    <string name="dialog_delete_edit_btn">Edit</string>
    <string name="dialog_delete_delete_btn">Delete</string>
    <string name="dialog_delete_cancel_btn">Cancel</string>



</resources>
