<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:text="@string/signin_welcome"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/txt_large_label"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/green_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/instructions"
        android:text="@string/signin_instructions"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/txt_medium"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/purple_dark"
        android:layout_below="@id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtxt_user_name_entry"
        android:hint="@string/hint_user_name_entry"
        android:textColorHint="@color/green_dark"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/edt_txt_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_sign_in_done"
        android:text="@string/btn_sign_in_done"
        android:textColor="@color/purple_light"
        android:padding="20dp"
        android:layout_below="@id/edtxt_user_name_entry"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>