<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/homepage_welcome"
        android:text="@string/homepage_welcome"
        android:textSize="@dimen/txt_medium"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/homepage_instructions"
        android:text="@string/homepage_instructions"
        android:layout_below="@id/homepage_welcome"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/homepage_listView"
        android:layout_below="@id/homepage_instructions"
        android:layout_above="@+id/txt_create_new_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

    <TextView
        android:id="@id/txt_create_new_deck"
        android:text="@string/txt_create_new_deck"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>