<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/edit_directions"
        android:text="@string/dialog_edit_directions"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dialog_edit_word_header"
        android:text="@string/dialog_edit_word_header"
        android:layout_below="@id/edit_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dialog_word_edit_field"
        android:layout_toRightOf="@id/dialog_edit_word_header"
        android:layout_alignBottom="@id/dialog_edit_word_header"
        android:layout_alignLeft="@+id/dialog_edit_def_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dialog_edit_def_header"
        android:text="@string/dialog_edit_definition_header"
        android:layout_below="@id/dialog_edit_word_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@id/dialog_edit_def_field"
        android:layout_toRightOf="@id/dialog_edit_def_header"
        android:layout_alignBottom="@id/dialog_edit_def_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</RelativeLayout>